# beautiful-jekyll

./: .RData  .README.md.swp  .Rhistory  .Rprofile  .clang-format  .directory  .env  .gitattributes  .gitconfig  .gitignore  .gitmodules  .glitch-assets  .jekyll-metadata  .markdownlint.json  .obsidian-git-data  .post-template  .pre-commit-config.yaml  .project  .travis.yml  .travis.yml.swp  007a0240-a398-4077-b089-2379010669f1.md  01c62331-2999-4df4-8a4e-8db6e50b5b74.md  01d56eed-599d-4fc5-b0fb-cf24f91e56a7.md  031bea60-db16-48aa-81bc-14de8c86c35b.md  0412c63d-72a1-431d-aef7-34bcd3d61728.md  053e3bda-2048-4b1b-8a99-26e70e74b9dd.md  067cab6c-7f32-4aa8-bf10-43b5967ac1a4.md  08398426-4de8-45b2-ac2c-7ee8e18040be.md  089c8b7a-ff6d-4409-a5c3-a63086ca58fb.md  092b28bf-70f7-4be7-8b38-56b9cdca3c83.md  09536603-4c08-4a22-a700-7241fcef8ed6.md  0_blog_posts.md  0abc097e-7933-4954-adaf-04c4b672e014.md  0aed5f54-b592-4cde-a141-c82c11888592.md  0b0006a8-98fb-4151-a221-93fc2af0b502.md  0d0771ec-d495-4671-a699-c360d1e00e7d.md  0dfc2227-da07-493e-ac01-d2bd5b743bba.md  0eb81f1a-65e5-418f-9c29-15cdf64d0213.md  11477a68-6f2e-47eb-8f37-6122945f3bfd.md  119f1db8-c822-4e48-9d43-a3447d6879df.md  (+867 more)
examples/: CMakeLists.txt  ConfigExamples.h.in
examples/arithmetic/: CMakeLists.txt  approximation.cpp  convergents-biginteger.cpp  convergents.cpp  extended-euclid.cpp  fraction.cpp  lower-integer-convex-hull.cpp  pattern.cpp
examples/base/: CMakeLists.txt  exampleIteratorCompletion.cpp
examples/dec/: CMakeLists.txt  DECExamplesCommon.h  exampleDECSurface.cpp  exampleDiscreteExteriorCalculusChladni.cpp  exampleDiscreteExteriorCalculusSolve.cpp  exampleDiscreteExteriorCalculusUsage.cpp  exampleHeatLaplace.cpp  examplePropagation.cpp  propagation.gp
examples/doc-examples/: CMakeLists.txt  DGtalCatch.h  catch.hpp  demo-kernel-1.cpp  exampleCatch.cpp  kernelDomain.cpp  labelledMapBestParameters.cpp  range.cpp
examples/geometry/: CMakeLists.txt
examples/graph/: CMakeLists.txt  graphTraversal.cpp  volDistanceTraversal.cpp
examples/images/: CMakeLists.txt  exampleArrayImageAdapter.cpp  exampleConstImageAdapter.cpp  exampleImageFactoryFromHDF5.cpp  exampleRigidtransformation2d.cpp  exampleRigidtransformation3d.cpp  exampleTiledImage.cpp  extract2DImagesFrom3D.cpp  extract2DImagesFrom3DandVisu.cpp  extract2DSlicesImagesFrom3D.cpp  imageBasicSubsampling.cpp  raw2HDF5.cpp
examples/io/: CMakeLists.txt  digitalSetFromPointList.cpp  digitalSetFromVol.cpp  display3DToOFF.cpp  meshFromOFF.cpp  viewDualSurface.cpp
examples/math/: CMakeLists.txt  polynomial-derivative.cpp  polynomial-read.cpp  polynomial2-derivative.cpp
examples/samples/: Al.100.vol  accflower-20-5-5-0.1.sdp  bunnyHeightField.pgm  church.pgm  circle-43.sdp  circleR10.pgm  circleR10modif.pgm  contourS.fc  contourS.pgm  contourS2.fc  contourSnoisy.sdp  ellipse-20-7-0.4.sdp  flower-30-8-3.sdp  lobster.vol  pointList3d.pl  tref.off
examples/shapes/: CMakeLists.txt  exampleEuclideanShapesDecorator.cpp  exampleMeshVoxelizer.cpp  exampleParametricShapes.cpp  mesh3DConstructionAndVisualisation.cpp  sphereCotangentLaplaceOperator.cpp  viewMarchingCubes.cpp  viewPolygonalMarchingCubes.cpp
examples/topology/: 3dBorderExtraction.cpp  3dBorderExtractionImg.cpp  3dKSSurfaceExtraction.cpp  CMakeLists.txt  area-estimation-with-digital-surface.cpp  area-estimation-with-indexed-digital-surface.cpp  ctopo-1-3d.cpp  ctopo-1.cpp  ctopo-1s-3d.cpp  ctopo-2-3d.cpp  ctopo-2.cpp  ctopo-fillContours.cpp  cubical-complex-collapse.cpp  cubical-complex-illustrations.cpp  cubicalComplexThinning.cpp  digitalSetToCubicalComplexes2D.cpp  digitalSurfaceSlice.cpp  frontierAndBoundary.cpp  generateSimplicityTables2D.cpp  generateSimplicityTables3D.cpp  generateVoxelComplexTables.cpp  homotopicThinning3D.cpp  khalimskySpaceScanner.cpp  trackImplicitPolynomialSurfaceToOFF.cpp  volBreadthFirstTraversal.cpp  volMarchingCubes.cpp  volScanBoundary.cpp  volToOFF.cpp  volTrackBoundary.cpp
examples/tutorial-examples/: 2DSliceImageFromVol.cpp  AreaSurfaceEstimation-final.cpp  AreaSurfaceEstimation-template.cpp  CMakeLists.txt  FMMErosion.cpp  fileGridCurveRanges.cpp  freemanChainFromImage.cpp  imageGridCurveEstimator.cpp  imageSetDT.cpp  polyhedralizer.cpp  shapeDTViewer.cpp  shapeGridCurveEstimator.cpp  shortcuts-geometry.cpp  shortcuts.cpp  volDTGranulo-template.cpp  volDTGranulo.cpp
src/: CMakeLists.txt
src/Board/: Board.cpp  Board.h  Board.ih  ModuleSRC.txt  PSFonts.cpp  PSFonts.h  Path.cpp  Path.h  Point.h  Rect.cpp  Rect.h  ShapeList.cpp  ShapeList.h  ShapeList.ih  Shapes.cpp  Shapes.h  Shapes.ih  Tools.cpp  Tools.h  Tools.ih  Transforms.cpp  Transforms.h  Transforms.ih
src/BoostAddons/: ModuleSRC.txt  README.md  zlib.cpp
src/yml/: _config.yml  advanced.yml  posts.yml  site.yml  social.yml  theme.yml
tests/: CMakeLists.txt  ConfigTest.h.in  DGtalCatch.h
tests/arithmetic/: CMakeLists.txt  testArithmeticDSS-benchmark.cpp  testIntegerComputer.cpp  testLatticePolytope2D.cpp  testLightSternBrocot.cpp  testLighterSternBrocot.cpp  testModuloComputer.cpp  testPattern.cpp  testStandardDSLQ0-LSB-reversedSmartDSS-benchmark.cpp  testStandardDSLQ0-LrSB-reversedSmartDSS-benchmark.cpp  testStandardDSLQ0-reversedSmartDSS-benchmark.cpp  testStandardDSLQ0-smartDSS-benchmark.cpp  testSternBrocot.cpp
tests/base/: CMakeLists.txt  testBasicBoolFunctors.cpp  testBasicFunctors.cpp  testBenchmark.cpp  testBits.cpp  testCirculator.cpp  testClock.cpp  testClone2.cpp  testCloneAndAliases.cpp  testConstIteratorAdapter.cpp  testConstRangeAdapter.cpp  testContainerTraits.cpp  testCountedConstPtrOrConstPtr.cpp  testCountedPtr.cpp  testCountedPtrOrPtr.cpp  testIndexedListWithBlocks.cpp  testIteratorCirculatorTraits.cpp  testIteratorFunctions.cpp  testLabelledMap-benchmark.cpp  testLabelledMap.cpp  testLabels.cpp  testMultiMap-benchmark.cpp  testOpenMP.cpp  testOrderedAlphabet.cpp  testOutputIteratorAdapter.cpp  testOwningOrAliasingPtr.cpp  testPartialTemplateSpecialization.cpp  testProgressBar.cpp  testSetFunctions.cpp  testSimpleRandomAccessRangeFromPoint.cpp  testTrace.cpp
tests/dec/: DECCommon.h  (+7 more)
(+94826 files in other folders)
